# adventofcode

./: .gitignore  LICENSE.md  README.md
2016/: day02-haskell.ipynb  day03-haskell.ipynb  day06-haskell.ipynb  day07-python.ipynb  day08-haskell.ipynb  day1-haskell.ipynb  day10-python.ipynb  day11-python.ipynb  day12-haskell.ipynb  day13-haskell.ipynb  day4-haskell.ipynb  day5-python.ipynb  day9-haskell.ipynb
2019/: day01-haskell.ipynb  day02-haskell.ipynb  day03-haskell.ipynb  day04-haskell.ipynb  day05-haskell.ipynb  day06-haskell.ipynb  day08-haskell.ipynb  day10-haskell.ipynb
2020/: day01-haskell.ipynb  day02-haskell.ipynb  day03-haskell.ipynb  day04-haskell.ipynb  day05-haskell.ipynb  day06-haskell.ipynb  day07-haskell.ipynb  day08-haskell.ipynb  day09-haskell.ipynb  day10-haskell.ipynb  day11-haskell.ipynb  day12-haskell.ipynb  day13-haskell.ipynb
2021/: day01-rust.ipynb  day02-rust.ipynb  day03-rust.ipynb  day04-rust.ipynb  day05-rust.ipynb  day06-rust.ipynb
2022/: day01-rust.ipynb  day02-rust.ipynb  day03-rust.ipynb  day04-rust.ipynb  day05-rust.ipynb  day06-rust.ipynb  day07-rust.ipynb  day08-rust.ipynb  day09-rust.ipynb  day10-rust.ipynb  day11-rust.ipynb
2023/: Cargo.toml  README.md
2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  template.rs
2024/: Cargo.toml  README.md
2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day18.rs  day19.rs  day20-pointset.rs  day20.rs  day22.rs  (+2 more)
2025/: Cargo.toml
(+11 files in other folders)
